--- a/app/src/main/res/layout/activity_add_player.xml
+++ b/app/src/main/res/layout/activity_add_player.xml
@@ -5,19 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
+
     android:background="@drawable/background"
     tools:context=".AddPlayer">
 
 
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:src="@drawable/pngegg">
 
+    </ImageView>
 
     <TextView
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:text="Nhập tên Player"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
         android:textSize="30sp"/>
     
     
@@ -38,9 +46,8 @@
             android:layout_marginStart="20dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/zero"
-            android:adjustViewBounds="true"
-            android:background="@color/white"/>
+            android:src="@drawable/cross"
+            android:adjustViewBounds="true" />
 
 
         <EditText
@@ -77,9 +84,8 @@
             android:layout_marginStart="20dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/cross"
-            android:adjustViewBounds="true"
-            android:background="@color/white"/>
+            android:src="@drawable/circle"
+            android:adjustViewBounds="true" />
 
 
         <EditText
@@ -111,6 +117,19 @@
         android:textColor="@color/white"
         android:background="@drawable/round_black_blue"
         />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Made by An va Dat"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:layout_marginTop="180dp"
+        android:layout_gravity="center"/>
+
+
+
 
 
 
