--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
                 android:layout_gravity="center"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/zero"
+                android:src="@drawable/circle"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"/>
 
